# haskell_grammatical_langage_corrector

./: ChangeLog.md  LICENSE  README.md  dict.txt  haskell-project.cabal  haskell-project.cabal.save0  input.txt
app/: ConnectionHelper.hs  CorrectionImplementation.hs  CorrectionModes.hs  FileReaderHelper.hs  GenerateCorrections.hs  Main.hs  TerminalMenuHelper.hs  Types.hs
