cabal-version:      2.4
name:               haskell-project
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             CodingDevotion
maintainer:         chartrandalexandre@gmail.com

-- A copyright notice.
-- copyright:
category:           Language
extra-source-files: ChangeLog.md

executable haskell-project
    main-is:          Main.hs
    other-modules:    Types, GenerateCorrections, ConnectionHelper, FileReaderHelper, TerminalMenuHelper, CorrectionModes

    default-extensions: OverloadedStrings
    
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0
                      , containers
                      , unordered-containers
                      , text
    hs-source-dirs:   app
    default-language: Haskell2010

